<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitJob">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <Button
                android:id="@+id/editJobType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:onClick="typeButtonListener"
                android:text="Job Type" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Description"
                android:inputType="textMultiLine" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <Button
                android:id="@+id/editDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2.5dp"
                android:layout_weight="1"
                android:onClick="dateButtonListener"

                android:text="Date" />

            <EditText
                android:id="@+id/editDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="Hours Required"/>
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <Button
                android:id="@+id/editPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:onClick="locationButtonListener"
                android:text="Location" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <Button
                android:id="@+id/editUrgency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:onClick="showUrgencyPopUp"
                android:text="Urgency" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:textSize="18sp"
                android:text="$"
                android:textAlignment="textEnd"
                android:layout_weight="1"
            />

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/editSalary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Salary"
                android:layout_marginEnd="0dp"
                android:layout_weight="7"/>
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/jobStatusLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="2.5dp"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/submitBtnForNewJob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:onClick="submitButtonListener"
                android:text="Submit" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

