...
    <string name ="CC_AMEX">"CC number is AMEX"</string>
    <string name="PSSWD_NO_SPECIAL_CHAR_ERR">Your password must contain at least one special character</string>

    //SubmitJob
    <string name="SELECT_JOB_TYPE_PROMPT">Please select a job type.</string>
    <string-array name="JOB_TYPES">
        <item>Repairing a computer</item>
        <item>Mowing the lawn</item>
        <item>Walking a dog</item>
        <item>Babysitting</item>
        <item>Picking up a grocery</item>
    </string-array>

    <string name="JOB_URGENCY_1">Priority 1</string>
    <string name="JOB_URGENCY_2">Priority 2</string>
    <string name="JOB_URGENCY_3">Priority 3</string>

    <string name="JOB_EMPTY_FIELD_ERR">You must fill all fields</string>
    <string name="JOB_DATE_PASSED_ERR">Date must not be in the past</string>
    <string name="JOB_TOO_LONG_ERR">This app is intended for shorter tasks</string>
    <string name="JOB_STATUS_OK">OK</string>

</resources>
